--- a/MyTeam.Application/MyTeam.Application.csproj
+++ b/MyTeam.Application/MyTeam.Application.csproj
@@ -10,4 +10,9 @@
     <ProjectReference Include="..\MyTeam.Domain\MyTeam.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="15.0.1" />
+    <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
+  </ItemGroup>
+
 </Project>
