--- a/MyTeam.Infrastructure/MyTeam.Infrastructure.csproj
+++ b/MyTeam.Infrastructure/MyTeam.Infrastructure.csproj
@@ -7,6 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.8" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.8" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="9.0.8" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\MyTeam.Application\MyTeam.Application.csproj" />
     <ProjectReference Include="..\MyTeam.Domain\MyTeam.Domain.csproj" />
   </ItemGroup>
