Application -> Added command to create Training

--- a/MyTeam.Application/MyTeam.Application.csproj
+++ b/MyTeam.Application/MyTeam.Application.csproj
@@ -18,8 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Commands\Training\" />
-    <Folder Include="Queries\Training\" />
+    <Folder Include="Queries\Trainings\" />
   </ItemGroup>
 
 </Project>
